# Luau-Decompiler

./: .gitignore  .prettierrc.json  README.md  example.lua  package-lock.json  package.json  tsconfig.json
examples/: bytecode.luauc  bytecode2.luauc  bytecode3.luauc  bytecodeout.luauc  example.lua  example4.lua  example4.luauc
generator/: CMakeLists.txt  Makefile  generator  main.cpp
src/: index.ts
src/byteReader/: index.ts
src/decompiler/: index.ts
src/decompiler/expressions/: Assignment.ts  Block.ts  Break.ts  Call.ts  End.ts  Expression.ts  FunctionDefinition.ts  IfThen.ts  Return.ts
src/decompiler/expressions/Inline/: Add.ts  Constant.ts  Eq.ts  Ge.ts  Gt.ts  Le.ts  Lt.ts  Neq.ts  Not.ts  Sub.ts
src/decompiler/statements/: Add.ts  Constant.ts  Eq.ts  Ge.ts  Gt.ts  IfThen.ts  Le.ts  Lt.ts  Neq.ts  Not.ts  Statement.ts  Sub.ts
src/deserializer/: Constant.ts  Function.ts  Instruction.ts  Program.ts  StringTable.ts  index.ts
src/enums/: constants.ts  opcodes.ts
src/types/: bytecode.d.ts  bytedata.d.ts
